# FYP-Data-Analysis-With-LLM

./: .gitmodules  README.md
dev/: .gitignore  README.md  action-graph-codes  cleaned.csv  dev-requirements.txt  inspection_report.json  langgraph.ipynb  pyproject.toml  requirements.txt
dev/interim/: cleaned_data_run_1.csv  summary_report_run_1.json
docs/: meeting_minutes.txt
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/api/process/: route.ts
frontend/components/: chat-interface.tsx  chat-panel.tsx  no-session-state.tsx
frontend/utils/: messageParser.tsx
nextjs/: package.json
